Separated Navbar into a component... 1. Separated Navbar into a component 2. Fixed nodejs logo 3. Edited some paragraph spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1;
 }
 
 a {
