--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,21 @@
+.navbar-section {
+  position: sticky;
+  top: 0;
+  z-index: 40;
+}
+
+@media only screen and (max-width: 800px) {
+  .navbar-section {
+    position: sticky;
+    top: 0;
+    z-index: 40;
+  }
+}
+
+.body-section {
+  margin-top: 20px;
+}
+
 .profile-banner {
   display: flex;
   height: 100%;
@@ -14,7 +32,6 @@
 .profile-banner-pic {
   width: 35%;
   height: 82%;
-  /* height: 50%; */
   margin: auto;
 }
 
